# solution-delivery-template

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  system_prompt.py
docs/: askui-agentic-qa-guide.md
helpers/: get_tools.py
helpers/scratchpad_tools/: __init__.py  scratchpad_read_tool.py  scratchpad_write_tool.py
helpers/summary_report/: __init__.py  collector.py  models.py  parser.py  writer.py
helpers/tools/: __init__.py  greeting_tool.py
prompts/: device_information.md  report_format.md  system_capabilities.md  ui_information.md
tasks/: calculator.csv  clock_demo.txt  webbrowser.json
tasks/demo/: notepad_hello.md  rules.md  teardown.md
tests/demo/: setup.md
