[project]
name = "solution-delivery-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "philipph-askui", email = "philipp.hallgarten@askui.com"},
]
dependencies = [
    "askui==0.30.0",
    "python-dotenv==1.2.1",
    "ruff>=0.15.5",
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
